--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,14 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.getpebble:pebblekit:3.0.0'
+    compile 'com.google.zxing:core:3.2.0'
+    compile 'com.google.zxing:android-integration:3.2.0'
 }
 
 repositories {
+    jcenter()
     mavenCentral()
-    maven { url "https://oss.sonatype.org/content/groups/public/" }
+    maven {
+        url "https://oss.sonatype.org/content/groups/public/"
+    }
 }
